--- a/git/formuladb-env/db/InventoryReceipt.yaml
+++ b/git/formuladb-env/db/InventoryReceipt.yaml
@@ -3,7 +3,7 @@ isEditable: true
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     receipt_item_table:
         name: receipt_item_table
@@ -11,6 +11,6 @@ props:
         referencedEntityName: ReceiptItem
         props: {}
         isLargeTable: true
-    _owner: { name: _owner, propType_: STRING, required: true }
-    _role: { name: _role, propType_: STRING, required: true }
-    _rev: { name: _rev, propType_: STRING, required: true }
+    _owner: { name: _owner, propType_: TEXT, required: true }
+    _role: { name: _role, propType_: TEXT, required: true }
+    _rev: { name: _rev, propType_: TEXT, required: true }
