--- a/git/formuladb-env/db/LargeSalesReport.yaml
+++ b/git/formuladb-env/db/LargeSalesReport.yaml
@@ -1,15 +1,15 @@
 _id: LargeSalesReport
 props:
-    _owner: { name: _owner, propType_: STRING, required: true }
-    _role: { name: _role, propType_: STRING, required: true }
-    _rev: { name: _rev, propType_: STRING, required: true }
+    _owner: { name: _owner, propType_: TEXT, required: true }
+    _role: { name: _role, propType_: TEXT, required: true }
+    _rev: { name: _rev, propType_: TEXT, required: true }
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     client:
         name: client
-        propType_: STRING
+        propType_: TEXT
         required: true
     month:
         name: month
