--- a/git/formuladb-env/db/Restaurant_Order_Item.yaml
+++ b/git/formuladb-env/db/Restaurant_Order_Item.yaml
@@ -7,15 +7,15 @@ props:
         scalarFormula: 'CONCATENATE(ID(order_id), "--", ID(menu_item_id))'
     _owner:
         name: _owner
-        propType_: STRING
+        propType_: TEXT
         required: true
     _role:
         name: _role
-        propType_: STRING
+        propType_: TEXT
         required: true
     _rev:
         name: _rev
-        propType_: STRING
+        propType_: TEXT
         required: true
     order_id:
         name: order_id
