--- a/git/formuladb-env/db/Room_Booking.yaml
+++ b/git/formuladb-env/db/Room_Booking.yaml
@@ -18,7 +18,7 @@ stateGraph:
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     guest:
         name: guest
@@ -54,6 +54,6 @@ props:
         name: cost
         propType_: FORMULA
         formula: days * 100
-    _owner: { name: _owner, propType_: STRING, required: true }
-    _role: { name: _role, propType_: STRING, required: true }
-    _rev: { name: _rev, propType_: STRING, required: true }
+    _owner: { name: _owner, propType_: TEXT, required: true }
+    _role: { name: _role, propType_: TEXT, required: true }
+    _rev: { name: _rev, propType_: TEXT, required: true }
