--- a/git/formuladb-env/db/InventoryOrder.yaml
+++ b/git/formuladb-env/db/InventoryOrder.yaml
@@ -28,11 +28,11 @@ stateGraph:
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     sales_agent:
         name: sales_agent
-        propType_: STRING
+        propType_: TEXT
         required: true
     creation_date:
         name: creation_date
@@ -44,7 +44,7 @@ props:
         referencedEntityName: OrderItem
         props: {}
         isLargeTable: true
-    _owner: { name: _owner, propType_: STRING, required: true }
-    _role: { name: _role, propType_: STRING, required: true }
-    _rev: { name: _rev, propType_: STRING, required: true }
+    _owner: { name: _owner, propType_: TEXT, required: true }
+    _role: { name: _role, propType_: TEXT, required: true }
+    _rev: { name: _rev, propType_: TEXT, required: true }
 isEditable: true
