--- a/git/formuladb-env/db/InventoryProduct.yaml
+++ b/git/formuladb-env/db/InventoryProduct.yaml
@@ -2,28 +2,28 @@ _id: InventoryProduct
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     code:
         name: code
-        propType_: STRING
+        propType_: TEXT
         required: true
     barcode:
         name: barcode
-        propType_: STRING
+        propType_: TEXT
     name:
         name: name
-        propType_: STRING
+        propType_: TEXT
         required: true
     description:
         name: description
-        propType_: STRING
+        propType_: TEXT
     inventory_location:
         name: inventory_location
         propType_: CHILD_TABLE
         referencedEntityName: ProductLocation
         props: {}
-    _owner: { name: _owner, propType_: STRING, required: true }
-    _role: { name: _role, propType_: STRING, required: true }
-    _rev: { name: _rev, propType_: STRING, required: true }
+    _owner: { name: _owner, propType_: TEXT, required: true }
+    _role: { name: _role, propType_: TEXT, required: true }
+    _rev: { name: _rev, propType_: TEXT, required: true }
 isEditable: true
