--- a/git/formuladb-env/db/LargeSalesProduct.yaml
+++ b/git/formuladb-env/db/LargeSalesProduct.yaml
@@ -2,15 +2,15 @@ _id: LargeSalesProduct
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     product_id:
         name: product_id
-        propType_: STRING
+        propType_: TEXT
         required: true
     product_name:
         name: product_name
-        propType_: STRING
+        propType_: TEXT
         required: true
     large_sales_value:
         name: large_sales_value
@@ -18,7 +18,7 @@ props:
         formula: >-
             SUMIF(OrderItem.quantity, product_id == @[product_id] && quantity >
             100)
-    _owner: { name: _owner, propType_: STRING, required: true }
-    _role: { name: _role, propType_: STRING, required: true }
-    _rev: { name: _rev, propType_: STRING, required: true }
+    _owner: { name: _owner, propType_: TEXT, required: true }
+    _role: { name: _role, propType_: TEXT, required: true }
+    _rev: { name: _rev, propType_: TEXT, required: true }
 isEditable: true
