--- a/git/formuladb-env/db/OrderItem.yaml
+++ b/git/formuladb-env/db/OrderItem.yaml
@@ -2,7 +2,7 @@ _id: OrderItem
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     product_id:
         name: product_id
@@ -23,9 +23,9 @@ props:
         name: units
         propType_: CHILD_TABLE
         referencedEntityName: InventoryProductUnit
-    _owner: { name: _owner, propType_: STRING, required: true }
-    _role: { name: _role, propType_: STRING, required: true }
-    _rev: { name: _rev, propType_: STRING, required: true }
+    _owner: { name: _owner, propType_: TEXT, required: true }
+    _role: { name: _role, propType_: TEXT, required: true }
+    _rev: { name: _rev, propType_: TEXT, required: true }
 autoCorrectionsOnValidationFailed:
     ProductLocation!positiveStock:
         -
