--- a/git/formuladb-env/db/ProductLocation.yaml
+++ b/git/formuladb-env/db/ProductLocation.yaml
@@ -2,21 +2,21 @@ _id: ProductLocation
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     product_id:
         name: product_id
-        propType_: STRING
+        propType_: TEXT
         required: true
         defaultValue: DEFAULT-location
     location_code:
         name: location_code
-        propType_: STRING
+        propType_: TEXT
         required: true
         defaultValue: DEFAULT-location
     category:
         name: category
-        propType_: STRING
+        propType_: TEXT
         required: true
     received_stock__:
         name: received_stock__
@@ -48,11 +48,11 @@ props:
         required: true
     state:
         name: state
-        propType_: STRING
+        propType_: TEXT
         required: true
-    _owner: { name: _owner, propType_: STRING, required: true }
-    _role: { name: _role, propType_: STRING, required: true }
-    _rev: { name: _rev, propType_: STRING, required: true }
+    _owner: { name: _owner, propType_: TEXT, required: true }
+    _role: { name: _role, propType_: TEXT, required: true }
+    _rev: { name: _rev, propType_: TEXT, required: true }
 validations:
     positiveStock:
         conditionExpr:
