--- a/git/formuladb-env/db/Room_Type.yaml
+++ b/git/formuladb-env/db/Room_Type.yaml
@@ -3,22 +3,22 @@ isEditable: true
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     name:
         name: name
-        propType_: STRING
+        propType_: TEXT
         required: true
     description:
         name: description
-        propType_: STRING
+        propType_: TEXT
         required: true
     picture:
         name: picture
         propType_: IMAGE
     long_description:
         name: long_description
-        propType_: STRING
+        propType_: TEXT
     price:
         name: price
         propType_: NUMBER
@@ -33,6 +33,6 @@ props:
         name: total_number_of_rooms
         propType_: FORMULA
         formula: 'COUNTIF(Room, room_type == @[_id])'
-    _owner: { name: _owner, propType_: STRING, required: true }
-    _role: { name: _role, propType_: STRING, required: true }
-    _rev: { name: _rev, propType_: STRING, required: true }
+    _owner: { name: _owner, propType_: TEXT, required: true }
+    _role: { name: _role, propType_: TEXT, required: true }
+    _rev: { name: _rev, propType_: TEXT, required: true }
