--- a/git/formuladb-env/frmdb-apps/basic-inventory/InventoryProduct.yaml
+++ b/git/formuladb-env/frmdb-apps/basic-inventory/InventoryProduct.yaml
@@ -2,22 +2,22 @@ _id: InventoryProduct
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     code:
         name: code
-        propType_: STRING
+        propType_: TEXT
         required: true
     barcode:
         name: barcode
-        propType_: STRING
+        propType_: TEXT
     name:
         name: name
-        propType_: STRING
+        propType_: TEXT
         required: true
     description:
         name: description
-        propType_: STRING
+        propType_: TEXT
     inventory_location:
         name: inventory_location
         propType_: CHILD_TABLE
