--- a/git/formuladb-env/frmdb-apps/basic-inventory/LargeSalesProduct.yaml
+++ b/git/formuladb-env/frmdb-apps/basic-inventory/LargeSalesProduct.yaml
@@ -2,15 +2,15 @@ _id: LargeSalesProduct
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     product_id:
         name: product_id
-        propType_: STRING
+        propType_: TEXT
         required: true
     product_name:
         name: product_name
-        propType_: STRING
+        propType_: TEXT
         required: true
     large_sales_value:
         name: large_sales_value
