--- a/git/formuladb-env/frmdb-apps/basic-inventory/OrderItem.yaml
+++ b/git/formuladb-env/frmdb-apps/basic-inventory/OrderItem.yaml
@@ -2,7 +2,7 @@ _id: OrderItem
 props:
     _id:
         name: _id
-        propType_: STRING
+        propType_: TEXT
         required: true
     product_id:
         name: product_id
