--- a/git/formuladb-env/db/Restaurant_Order_Item.yaml
+++ b/git/formuladb-env/db/Restaurant_Order_Item.yaml
@@ -33,3 +33,8 @@ props:
         name: quantity
         propType_: NUMBER
         required: true
+    menu_item_price:
+        name: menu_item_price
+        propType_: REFERENCE_TO
+        referencedEntityName: Restaurant_Menu_Item
+        referencedPropertyName: price
