--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ build_images_and_deploy_dev:
 
 test_mem:
   stage: test_and_bundle
+  image: node:10.20.1
   script:
     - npm test
   cache:
@@ -76,6 +77,7 @@ test_mem:
 
 test_fe:
   stage: test_and_bundle
+  image: node:10.20.1
   script:
     - npm run test:fe
   cache:
@@ -87,6 +89,7 @@ test_fe:
 
 test_postgres:
   stage: test_and_bundle
+  image: node:10.20.1
   script:
     - ./ci/jobs.sh $CI_JOB_NAME
   cache:
@@ -98,6 +101,7 @@ test_postgres:
 
 test_stress:
   stage: test_and_bundle
+  image: node:10.20.1
   retry: 2
   script:
     - ./ci/jobs.sh $CI_JOB_NAME
