--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,6 +1,9 @@
 apiVersion: skaffold/v2alpha3
 kind: Config
 build:
+  cluster:
+    dockerConfig:
+      path: ci/docker-config.json
   artifacts:
   - image: registry.gitlab.com/metawiz/febe/formuladb-be
     context: .
@@ -21,7 +24,7 @@ build:
       - src: scripts/*
         dest: /scripts
         strip: scripts
-    docker:
+    kaniko:
       dockerfile: Dockerfile.be
 deploy:
   kustomize:
@@ -40,7 +43,7 @@ profiles:
 - name: ci
   patches:
   - op: add
-    path: /build/artifacts/0/docker/buildArgs
+    path: /build/artifacts/0/kaniko/buildArgs
     value:
       BUILD_CI: 1
   - op: replace
