short uuid, fixes: currect number when selecting data from pg, formula editor

--- a/git/formuladb-env/db/Restaurant_Order_Item.yaml
+++ b/git/formuladb-env/db/Restaurant_Order_Item.yaml
@@ -22,7 +22,7 @@ props:
         propType_: REFERENCE_TO
         referencedEntityName: Restaurant_Order
         referencedPropertyName: _id
-        referencedEntityAlias: 'true'
+        required: true
     menu_item_id:
         name: menu_item_id
         propType_: REFERENCE_TO
