--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,7 +124,7 @@ test_stress:
 
 test_api:
   stage: e2e_dev_env
-  image: google/cloud-sdk
+  image: node:10.20.1
   script:
     - bash api-tests.sh
   artifacts:
@@ -134,7 +134,7 @@ test_api:
 
 e2e_dev_env:
   stage: e2e_dev_env
-  image: google/cloud-sdk
+  image: node:10.20.1
   retry: 2
   script:
     - export KUBECONFIG="${PWD}/k8s/production-kube-config.conf"
