--- a/git/formuladb-env/db/Restaurant_Order_Item.yaml
+++ b/git/formuladb-env/db/Restaurant_Order_Item.yaml
@@ -4,7 +4,7 @@ props:
     _id:
         name: _id
         propType_: KEY
-        scalarFormula: 'CONCATENATE(ID(order_id), "--", ID(menu_item_id))'
+        scalarFormula: 'CONCATENATE(ID(order), "--", ID(menu_item))'
     _owner:
         name: _owner
         propType_: TEXT
@@ -17,19 +17,23 @@ props:
         name: _rev
         propType_: TEXT
         required: true
-    order_id:
-        name: order_id
+    restaurant_order:
+        name: restaurant_order
         propType_: REFERENCE_TO
         referencedEntityName: Restaurant_Order
-        referencedPropertyName: _id
         required: true
-    menu_item_id:
-        name: menu_item_id
+    menu_item:
+        name: menu_item
         propType_: REFERENCE_TO
         referencedEntityName: Restaurant_Menu_Item
-        referencedPropertyName: _id
         required: true
     quantity:
         name: quantity
         propType_: NUMBER
         required: true
+    price:
+        name: price
+        propType_: HLOOKUP
+        referenceToPropertyName: menu_item
+        referencedPropertyName: price
+
