--- a/Dockerfile.video
+++ b/Dockerfile.video
@@ -34,4 +34,4 @@ RUN echo $'Xvfb -ac :99 -screen 0 1920x1080x16 &\n\
 VOLUME /febe
 WORKDIR /febe
 # https://github.com/elgalu/docker-selenium/issues/20#issuecomment-135092714
-# docker build -t registry.gitlab.com/metawiz/febe/ci-with-video:1.0.2 -f Dockerfile.video .
+# docker build -t registry.formuladb.io/formuladb/febe/ci-with-video:1.0.2 -f Dockerfile.video .
