--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
         "jsep": "git+https://github.com/acristu/jsep.git",
         "lodash": "^4.17.15",
         "md5": "^2.2.1",
+        "merge-img": "^2.1.3",
         "micromatch": "^4.0.2",
         "mime": "^2.4.4",
         "mkdirp": "^0.5.1",
